[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md-cloud"
version = "0.1.0"
description = "MCP Server for Mingdao Collaboration v1 API (cloud-token mode, no OAuth)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mdcloud = "md_cloud.server:main"

[tool.setuptools.packages.find]
where = ["src"]
